test_datasets/generated/syntax_errors/error_2.py
def validate_user(age):
    if age >= 18:
    print("Adult")  # ERROR: Missing indentation
    else:
        print("Minor")
